--- a/main.html
+++ b/main.html
@@ -7,11 +7,12 @@
 </head>
 
 <body>
-	<div class="container">
-		<h1>img</h1>
-		<img src="" alt="all text">
 
-	</div>	
+		<div class="main" id="heading">
+
+			<img src="" alt="all text">
+			
+		</div>	
 
 </body>
 
